--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "grupo_10_agencia_de_viajes",
   "version": "1.0.0",
-  "description": "",
+  "description": "Empresa turistica dedicada a la venta de Paquetes de viajes Nacionales e Internacionales, los cuales los mismos incluyen vuelos a destino y de regreso , hospedaje, excursiones,alquiler de vehiculo,entre otros.",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/MateoBoutet/grupo_10_agencia_de_viajes#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
