--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/MateoBoutet/grupo_10_agencia_de_viajes#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
