--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-load": "^1.1.16",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
