--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-load": "^1.1.16",
+    "express-validator": "^6.14.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
