--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-load": "^1.1.16",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.3",
+    "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
